--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@mui/material": "^5.16.6",
     "@mui/material-nextjs": "^5.16.6",
     "@testing-library/dom": "^10.4.0",
+    "@types/dompurify": "^3.0.5",
+    "dompurify": "^3.1.6",
+    "marked": "^14.0.0",
     "next": "14.2.5",
     "openai": "^4.54.0",
     "react": "^18",
